k8s/apps/multimedia/sonarr/overlays/anime/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  template:
    spec:
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia-sonarr-anime
