k8s/apps/multimedia/sonarr/overlays/anime/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr-anime
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr-anime.${CLUSTER_DOMAIN}`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: sonarr
          namespace: sonarr-anime
          port: 8989
    - kind: Rule
      match: "Host(`sonarr-anime.${CLUSTER_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik-server
          namespace: authentik
          port: http
